# poker44-miner-v1

./: README.md  pyproject.toml
detector/: features.py  inference.py
detector/artifacts/: model.joblib
neurons/: miner.py
scripts/: ecosystem.config.js  run_miner.sh
