[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poker44-miner-v1"
version = "1.0.0"
description = "Bot-detection miner for Poker44 (Bittensor subnet 126)"
requires-python = ">=3.10"
dependencies = [
  "bittensor",
  "python-dotenv",
  "joblib",
  "numpy",
  "scikit-learn==1.9.0",
  "lightgbm",
]

[tool.setuptools]
packages = ["poker44", "detector"]
